# bci2000-grip

./: .gitignore  README.md
batch/: GripFlightAssetPreview.bat  GripFlightTask.bat  GripForceTask_GripForceSource.bat
parms/: gripforce_test.prm
parms/examples/: GripForceTask_GripForceSource.prm
src/core/Application/: CMakeLists.txt
src/core/Application/GripFlightTask/: AssetManager.cpp  AssetManager.h  CMakeLists.txt  FlightPhysics.cpp  FlightPhysics.h  GameStateMachine.cpp  GameStateMachine.h  GripFlightAssetPreview.cpp  GripFlightAssetPreview.h  GripFlightAssetPreview.prm  GripFlightTask.cpp  GripFlightTask.h  GripFlightTask.prm  MapLoader.cpp  MapLoader.h  SideScrollScene.cpp  SideScrollScene.h
src/core/Application/GripFlightTask/assets/: README.md
src/core/Application/GripFlightTask/maps/: default.csv
src/core/Application/GripForceTask/: CMakeLists.txt  GripForceTask.cpp  GripForceTask.h  GripForceTask_SignalGenerator.bat
src/core/SignalSource/: CMakeLists.txt
src/core/SignalSource/GripForceSource/: CMakeLists.txt  GripForceSourceADC.cpp  GripForceSourceADC.h
src/core/Tools/: CMakeLists.txt
src/core/Tools/NI6501Marker/: CMakeLists.txt  NI6501Marker.cpp
